The big one - update after transfer

--- a/Frontend/src/app/onboard_request/request-view/request-view.component.html
+++ b/Frontend/src/app/onboard_request/request-view/request-view.component.html
@@ -56,7 +56,7 @@
             <ng-container matColumnDef="action">
               <th mat-header-cell *matHeaderCellDef></th>
               <td mat-cell *matCellDef="let element" style="width:100px;">
-                <button mat-raised-button routerLink="/request-update" style="margin-right: 5%; display: flex; align-items: center; font-size: 16px; width: 85px; margin-top: 0.5%;"><mat-icon matPrefix style="margin-right:10%;">edit</mat-icon>Edit</button>
+                <button mat-raised-button routerLink="/request-update/{{getTotal()}}" style="margin-right: 5%; display: flex; align-items: center; font-size: 16px; width: 85px; margin-top: 0.5%;"><mat-icon matPrefix style="margin-right:10%;">edit</mat-icon>Edit</button>
               </td>
             </ng-container>
     
