--- a/Frontend/src/app/view-admin/view-admin.component.html
+++ b/Frontend/src/app/view-admin/view-admin.component.html
@@ -37,17 +37,18 @@
       <mat-form-field appearance="fill"
         style=" float:right; font-size: 12px; width: 300px; margin-top:0.5%; margin-right:1%;">
         <mat-label>Search</mat-label>
-        <<<<<<< HEAD <input matInput (keyup)="search()" [(ngModel)]="searchWord" />
-        =======
+        <input matInput (keyup)="search()" [(ngModel)]="searchWord" />
+        
         <input matInput />
         <mat-icon matSuffix>search</mat-icon>
+      </mat-form-field>
 
-
+    </div>
         <div style="margin-right:1%; margin-left:1%;">
-          <<<<<<< HEAD <table mat-table [dataSource]="SearchedAdmin" class="mat-elevation-z8">
-            =======
+          <table mat-table [dataSource]="SearchedAdmin" class="mat-elevation-z8">
+         
             <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-              >>>>>>> Bupe
+             
 
               <ng-container matColumnDef="id">
                 <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;"> No. </th>
@@ -104,8 +105,10 @@
               <tr mat-header-row *matHeaderRowDef="displayedColumns" style="background-color:#244688;"></tr>
               <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
             </table>
-        </div>
-
+          </table>
+       
+    </div>
+    
 
 
   </mat-sidenav-content>
