--- a/Frontend/src/app/view-admin/view-admin.component.html
+++ b/Frontend/src/app/view-admin/view-admin.component.html
@@ -21,7 +21,7 @@
   </mat-sidenav>
   <mat-sidenav-content class="Main-content">
     <h1 style="margin-left: 1%; margin-top:1%; color: #244688; font-weight:700; font-size:32pt;">
-      Manage Employees
+      Manage Admins
     </h1>
 
     <div mat-list-item style="margin-left: 0.5%; display: flex;  align-items: center; ">
@@ -37,8 +37,7 @@
       <mat-form-field appearance="fill"
         style=" float:right; font-size: 12px; width: 300px; margin-top:0.5%; margin-right:1%;">
         <mat-label>Search</mat-label>
-        <input matInput (keyup)="search()" [(ngModel)]="searchWord" />
-        <input matInput />
+        <input matInput (keyup)="search()" [(ngModel)]="searchWord"/>
         <mat-icon matSuffix>search</mat-icon>
       </mat-form-field>
 
