--- a/Frontend/src/app/onboard_request/request-create/request-create.component.css
+++ b/Frontend/src/app/onboard_request/request-create/request-create.component.css
@@ -19,7 +19,7 @@
     background: #eee;
     border-top:solid;
     text-align: center;
-    position: absolute;
+   
 }
 
 
@@ -28,7 +28,7 @@ td {
 }
 
 ::ng-deep .mat-mdc-tab-body-content {
-    height:250px!important;
+    height:300px!important;
 }
 
 mat-error {
@@ -41,4 +41,16 @@ mat-error:first-child {
 
 mat-form-field{
     width:350px
+}
+
+.file-upload {
+    background-color: #244688;
+    color: white;
+    
+  }
+
+  label {
+    margin-right: 20px;
+    font-weight: 500;
+    
 }
