--- a/Frontend/src/app/onboard_request/request-update/request-update.component.html
+++ b/Frontend/src/app/onboard_request/request-update/request-update.component.html
@@ -1,8 +1,11 @@
 <div class="content">
-    <div style="display: inline-block; text-align: left;position: relative;width: 700px;" *ngIf="selectedOption == 'True';Sole" #General>
-    <h1 style="margin: 1%;  color: #244688; font-weight:700; font-size:32pt;">
-      Edit Vendor Onboard Request
-    </h1>
+  <div style="display: inline-block; text-align: left;position: relative;width: 700px;">
+  <h1 style="margin: 1%;  color: #244688; font-weight:700; font-size:32pt;">
+    Edit Vendor Onboard Request
+  </h1>
+
+  <div style="display: inline-block; text-align: left;position: relative;width: 700px;" *ngIf="VendorType == true ;Sole" #General>
+    
     <br>
       <mat-tab-group style="background-color: white;" #tabGroup [(selectedIndex)]=selectedIndex>
         <form [formGroup]="CompanyContactInfoFormGroup" >
@@ -42,10 +45,10 @@
           </td>
       </tr>
       <br>
-      <tr *ngIf="down[i]">
+      <tr>
         <td><label for="file" style="margin-right: 1%;">View current Company Quote: </label></td>
         <td >  
-          <a href="{{url[i]}}" download="{{down[i]}}">{{down[i]}}</a>  
+          <a href="{{FileDetails[i].FileURL}}" download="{{FileDetails[i].FileName}}">{{FileDetails[i].FileName}}</a>  
         </td>
     </tr>
       
@@ -87,18 +90,8 @@
 
 
     <!--  -->
-    <div style="display: inline-block; text-align: left;position: relative;width: 700px;" *ngIf="selectedOption == 'False';General" #Sole>
-      <h1 style="margin: 1%;  color: #244688; font-weight:700; font-size:32pt;">
-        Create Vendor Onboard Request
-      </h1>
-      <div>  
-      <label style="margin-left: 1%; margin-top:1%;color: #244688;font-size:16pt;">Please select one of the two options:</label>
-      <br>
-      <mat-radio-group (change)="radioButtonChange($event)">
-        <mat-radio-button  value="True">General suppliers</mat-radio-button>
-        <mat-radio-button value="False" checked >Sole suppliers</mat-radio-button>
-      </mat-radio-group>
-      </div>
+    <div style="display: inline-block; text-align: left;position: relative;width: 700px;" *ngIf="VendorType == false ;General" #Sole>
+      
       <form  [formGroup]="SoleSupplierFormGroup" style="background-color: white;" >
         <div style="margin-left:1%; margin-top:1%;margin-bottom: 20px;">
           <table>
@@ -115,6 +108,17 @@
               </td>
             </tr>
             <tr>
+              <td><label  for="name" style="margin-right: 1%;">Company Email:</label></td>
+              <td> 
+                  <mat-form-field appearance="fill">
+                      <input matInput placeholder="Company Email" id="CompanyName" formControlName="CompanyEmail" [errorStateMatcher]="matcher" >
+                      <mat-error *ngIf="SoleSupplierFormGroup.get('CompanyEmail')?.hasError('required')">Company email is required</mat-error>
+                      <mat-error *ngIf="SoleSupplierFormGroup.get('CompanyEmail')?.hasError('maxlength')">Company email cannot be more than 32 characters</mat-error>
+                      <mat-error *ngIf="SoleSupplierFormGroup.get('CompanyEmail')?.hasError('email')">Company email is invalid</mat-error>
+                    </mat-form-field>
+              </td>
+          </tr>
+            <tr>
               <td><label for="reason" style="margin-right: 1%;">Reason:</label></td>
               <td>
                 <mat-form-field appearance="fill">
@@ -125,9 +129,16 @@
               </td>
             </tr>
             <tr>
-              <td><label for="file" style="margin-right: 1%;">Company Quote: </label></td>
+              <td><label for="file" style="margin-right: 1%;" >Current Company Quote: </label></td>
+              <td *ngIf="onboardRequest[0].quotes != 'None'">  
+               <a href="{{FileDetails[0].FileURL}}" download="{{FileDetails[0].FileName}}">{{FileDetails[0].FileName}}</a> 
+              </td>
+              <td *ngIf="onboardRequest[0].quotes == 'None'">None provided</td>
+           </tr>
+            <tr>
+              <td><label for="file" style="margin-right: 1%;">New Company Quote: </label></td>
               <td>
-                <input id="file" type="file" class="file-upload"  formControlName="CompanyQuote" onchange="onFileUpload(event.target.files)">
+                <input id="file" type="file" class="file-upload"  formControlName="CompanyQuote" (change)="onFileUpload(0,$event)">
               </td>
             </tr>
             <br>
@@ -138,5 +149,5 @@
       </form>
       
     </div>
-  
+  </div>
   </div>
