--- a/Frontend/src/app/view-employee-role/view-employee-role.component.html
+++ b/Frontend/src/app/view-employee-role/view-employee-role.component.html
@@ -10,10 +10,10 @@
       <a mat-list-item class="uni-font" routerLink="/ViewEmployee">Employees</a>
       <a mat-list-item class="uni-font" routerLink="/ViewAdmin">Admins</a>
       <a mat-list-item class="uni-font" routerLink="/ViewEmpRole">Roles</a>
-      <a mat-list-item class="uni-font">Departments</a>
-      <a mat-list-item class="uni-font">Branch</a>
+      <a mat-list-item class="uni-font" routerLink="/ViewDepartment">Departments</a>
+      <a mat-list-item class="uni-font" routerLink="/ViewBranch">Branch</a>
       <a mat-list-item class="uni-font">Delegation of Authority</a>
-      <a mat-list-item class="uni-font">Mandate Limits</a>
+      <a mat-list-item class="uni-font" routerLink="/ViewMandateLimit">Mandate Limits</a>
       <a mat-list-item class="uni-font">Manage Help</a>
       <a mat-list-item class="uni-font">Settings</a>
     </mat-nav-list>
