--- a/Frontend/src/app/edit-branch/edit-branch/edit-branch.component.html
+++ b/Frontend/src/app/edit-branch/edit-branch/edit-branch.component.html
@@ -2,7 +2,7 @@
     <mat-card style="width: 550px; margin-top: 1%; display: flex; justify-content: center; align-items: center; ">
       <form [formGroup]="myForm" novalidate fxLayout="column wrap" fxLayoutAlign="center center" fxLayoutGap="10px" (ngSubmit)="onSubmit()">
         <mat-card-header>
-          <mat-card-title style="color: #244688; font-weight:700; font-size:32pt; margin-bottom:5%;">Create Branch</mat-card-title>
+          <mat-card-title style="color: #244688; font-weight:700; font-size:32pt; margin-bottom:5%;">Edit Branch</mat-card-title>
           <mat-card-subtitle style="justify-content: center; align-items: center;">
   
             <table style="width:100%;" cellspacing="0">
@@ -88,9 +88,7 @@
           </mat-card-subtitle>
         </mat-card-header>
         <mat-card-actions style="display: flex; justify-content: center; align-items: center; margin-top: 5%;">
-            <button mat-raised-button type="submit"
-            style="width: 150px; font-size: 14px; height: 42px; margin: 10px;" [disabled]="!myForm.valid"
-            [ngStyle]="{'background-color': !myForm.valid ? 'rgba(148, 204, 91, 0.6)' : '#94CC5B','color': !myForm.valid ? 'rgba(255, 255, 255, 0.6)' : 'white'}">Save</button>
+          <button mat-raised-button style="width: 150px; font-size: 14px; height: 42px; margin: 10px; background-color:#94CC5B; color: white;" [disabled]="!myForm.valid" type="submit">Save</button>
           <button mat-raised-button style="width: 150px; font-size: 14px; height: 42px; margin: 10px; background-color:#244688; color:white;" (click)="Close()">Cancel</button>
         </mat-card-actions>
       </form>
