--- a/Frontend/src/app/view-department/view-department/view-department.component.html
+++ b/Frontend/src/app/view-department/view-department/view-department.component.html
@@ -13,7 +13,7 @@
         <a mat-list-item class="uni-font" routerLink="/ViewDepartment">Departments</a>
         <a mat-list-item class="uni-font" routerLink="/ViewBranch">Branch</a>
         <a mat-list-item class="uni-font">Delegation of Authority</a>
-        <a mat-list-item class="uni-font">Mandate Limits</a>
+        <a mat-list-item class="uni-font" routerLink="/ViewMandateLimit">Mandate Limits</a>
         <a mat-list-item class="uni-font">Manage Help</a>
         <a mat-list-item class="uni-font">Settings</a>
       </mat-nav-list>
@@ -33,10 +33,9 @@
   
         <span style="flex: 1 1 auto;"></span>
   
-        <mat-form-field appearance="fill"
-                        style=" float:right; font-size: 12px; width: 300px; margin-top:0.5%; margin-right:1%;">
-          <mat-label>Search</mat-label>
-          <input matInput />
+        <mat-form-field appearance="fill" style=" float:right; font-size: 12px; width: 300px; margin-top:0.5%; margin-right:1%;" >
+          <mat-label>Search by name</mat-label>
+          <input matInput  (keyup)="search()" [(ngModel)]="searchWord" />
           <mat-icon matSuffix>search</mat-icon>
         </mat-form-field>
   
@@ -44,7 +43,7 @@
 
       <div style="margin-right:1%; margin-left:1%;">
   
-        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+        <table mat-table [dataSource]="SearchedDepartment" class="mat-elevation-z8">
 
 
           <ng-container matColumnDef="department_ID">
@@ -66,12 +65,10 @@
 
 
             <ng-container matColumnDef="action">
-                <th mat-header-cell *matHeaderCellDef></th>
-                <td mat-cell *matCellDef="let Departments" style="width:100px;">
-                    <button mat-raised-button routerLink="/EditDepartment/{Departments.department_ID}"
-                        style="margin-right: 5%; display: flex; align-items: center; font-size: 16px; width: 85px; margin-top: 0.5%;background-color: #94CC5B;"
-                        type="button"><mat-icon matPrefix style="margin-right:10%;">edit</mat-icon>Edit</button>
-                </td>
+              <th mat-header-cell *matHeaderCellDef></th>
+              <td mat-cell *matCellDef="let Departments" style="width:100px;">
+                <button mat-raised-button style="margin-right: 5%; display: flex; align-items: center; font-size: 16px; width: 85px; margin-top: 0.5%; background-color: #94CC5B;" [routerLink]="['/EditDepartment', Departments.department_ID]" type="button"><mat-icon matPrefix style="margin-right:10%;" >edit</mat-icon>Edit</button>
+              </td>
             </ng-container>
 
             <ng-container matColumnDef="delete">
