--- a/Frontend/src/app/view-consumable/view-consumable.component.html
+++ b/Frontend/src/app/view-consumable/view-consumable.component.html
@@ -7,9 +7,9 @@
                 <h2 class="uni-font">Inventory</h2>
             </div>
 
-            <a mat-list-item class="uni-font" routerLink="/ViewConsumable">Manage Consumables</a>
-            <a mat-list-item class="uni-font" routerLink="/ViewConsumableCategory">Manage Consumable Categories</a>
-            <a mat-list-item class="uni-font" routerLink="/ViewConsumable">Manage Assets</a>
+            <a mat-list-item class="uni-font" routerLink="/ViewConsumable">View Consumables</a>
+            <a mat-list-item class="uni-font" routerLink="/ViewConsumableCategory">View Consumable Categories</a>
+            <a mat-list-item class="uni-font" routerLink="/ViewConsumable">View Assets</a>
         </mat-nav-list>
     </mat-sidenav>
 
@@ -18,7 +18,7 @@
     <mat-sidenav-content class="Main-content">
 
         <h1 style="margin-left: 1%; margin-top:1%; color: #244688; font-weight:700; font-size:32pt;">
-            Manage Consumables
+            View Consumables
         </h1>
 
         <div mat-list-item style="margin-left: 0.5%; display: flex;  align-items: center; ">
