--- a/Frontend/src/app/edit-consumable-category/edit-consumable-category.component.html
+++ b/Frontend/src/app/edit-consumable-category/edit-consumable-category.component.html
@@ -4,8 +4,8 @@
             (ngSubmit)="UpdateCategory()">
             <mat-card-header>
                 <mat-card-title
-                    style="color: #244688; font-weight:700; font-size:32pt; margin-bottom:5%; text-align:center;">Create
-                    Consumable</mat-card-title>
+                    style="color: #244688; font-weight:700; font-size:32pt; margin-bottom:5%; text-align:center;">Edit
+                    Consumable Category</mat-card-title>
                 <mat-card-subtitle>
                     <table style="width:100%;" cellspacing="0">
                         <tr>
