--- a/Frontend/src/app/create-admin/create-admin.component.html
+++ b/Frontend/src/app/create-admin/create-admin.component.html
@@ -17,7 +17,7 @@
                   <mat-form-field>
                     <input matInput type="text" placeholder="E.g. John" formControlName="AdminName" id="AdminName"
                       required>
-                    <mat-hint align="end">Not more then 32 characters long.</mat-hint>
+                    <mat-hint align="end">Not more than 32 characters long.</mat-hint>
                     <mat-error *ngIf="myError('AdminName', 'required')">Name is required</mat-error>
                     <mat-error *ngIf="myError('AdminName', 'maxlength')">Limit exceed</mat-error>
                     <mat-error *ngIf="myError('AdminName', 'minlength')">Name must be 2 to 32 characters
@@ -33,7 +33,7 @@
                   <mat-form-field>
                     <input matInput type="text" placeholder="E.g. Doe" formControlName="AdminSurname" id="AdminSurname"
                       required>
-                    <mat-hint align="end">Not more then 50 characters long.</mat-hint>
+                    <mat-hint align="end">Not more than 50 characters long.</mat-hint>
                     <mat-error *ngIf="myError('AdminSurname', 'required')">Surname is required</mat-error>
                     <mat-error *ngIf="myError('AdminSurname', 'maxlength')">Limit exceed</mat-error>
                     <mat-error *ngIf="myError('AdminSurname', 'pattern')">Surname can not contain numbers</mat-error>
