--- a/Frontend/src/app/create-employee/create-employee.component.html
+++ b/Frontend/src/app/create-employee/create-employee.component.html
@@ -17,7 +17,7 @@
                   <mat-form-field>
                     <input matInput type="text" placeholder="E.g. John" formControlName="EmployeeName" id="EmployeeName"
                       required>
-                    <mat-hint align="end">Not more then 32 characters long.</mat-hint>
+                    <mat-hint align="end">Not more than 32 characters long.</mat-hint>
                     <mat-error *ngIf="myError('EmployeeName', 'required')">Name is required</mat-error>
                     <mat-error *ngIf="myError('EmployeeName', 'maxlength')">Limit exceed</mat-error>
                     <mat-error *ngIf="myError('EmployeeName', 'minlength')">Name must be 2 to 32 characters
@@ -33,7 +33,7 @@
                   <mat-form-field>
                     <input matInput type="text" placeholder="E.g. Doe" formControlName="EmployeeSurname"
                       id="EmployeeSurname" required>
-                    <mat-hint align="end">Not more then 50 characters long.</mat-hint>
+                    <mat-hint align="end">Not more than 50 characters long.</mat-hint>
                     <mat-error *ngIf="myError('EmployeeSurname', 'required')">Surname is required</mat-error>
                     <mat-error *ngIf="myError('EmployeeSurname', 'maxlength')">Limit exceed</mat-error>
                     <mat-error *ngIf="myError('EmployeeSurname', 'pattern')">Surname can not contain numbers</mat-error>
@@ -63,7 +63,8 @@
                   <br />
                   <mat-form-field>
                     <input matInput type="text" placeholder="E.g. 082 123 4567" formControlName="CellPhone_Num"
-                      id="CellPhone_Num" required>
+                           id="CellPhone_Num" required>
+                    <mat-hint align="end">Please include spaces as shown in the placeholder.</mat-hint>
                     <mat-error *ngIf="myError('CellPhone_Num', 'required')">Phone is required</mat-error>
                     <mat-error *ngIf="myError('CellPhone_Num', 'maxlength')">Limit exceed</mat-error>
                     <mat-error *ngIf="myError('CellPhone_Num', 'minlength')">Phone number must be 10 numbers</mat-error>
@@ -97,6 +98,7 @@
                       <mat-option>---</mat-option>
                       <mat-option *ngFor="let ml of mandate_limits" [value]="ml">{{ml.ammount}}</mat-option>
                     </mat-select>
+                    <mat-hint align="end">Employee spend limit.</mat-hint>
                     <mat-error *ngIf="myError('Mandate_ID', 'required')">Please choose a mandate limit</mat-error>
                   </mat-form-field>
                 </mat-card-content>
