--- a/Frontend/src/app/view-admin/view-admin.component.html
+++ b/Frontend/src/app/view-admin/view-admin.component.html
@@ -27,25 +27,28 @@
     <div mat-list-item style="margin-left: 0.5%; display: flex;  align-items: center; ">
 
       <button mat-raised-button
-        style="width: 200px; font-size: 14px; height: 42px; margin: 10px; background-color:#244688; color:white;"
-        routerLink="/AddAdmin">
+              style="width: 200px; font-size: 14px; height: 42px; margin: 10px; background-color:#244688; color:white;"
+              routerLink="/AddAdmin">
         Create Admin
       </button>
 
       <span style="flex: 1 1 auto;"></span>
 
       <mat-form-field appearance="fill"
-        style=" float:right; font-size: 12px; width: 300px; margin-top:0.5%; margin-right:1%;">
+                      style=" float:right; font-size: 12px; width: 300px; margin-top:0.5%; margin-right:1%;">
         <mat-label>Search</mat-label>
-        <input matInput (keyup)="search()" [(ngModel)]="searchWord"/>
+        <input matInput (keyup)="search()" [(ngModel)]="searchWord" />
         <mat-icon matSuffix>search</mat-icon>
       </mat-form-field>
 
     </div>
 
+    <div class="d-flex justify-content-center">
+      <span class="loader" id="loading"></span>
+    </div>
 
     <div style="margin-right:1%; margin-left:1%;">
-      <table mat-table [dataSource]="SearchedAdmin" class="mat-elevation-z8">
+      <table mat-table [dataSource]="SearchedAdmin" class="mat-elevation-z8" id="table">
 
         <ng-container matColumnDef="id">
           <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;"> No. </th>
@@ -83,9 +86,11 @@
           <th mat-header-cell *matHeaderCellDef></th>
           <td mat-cell *matCellDef="let Admins" style="width:100px;">
             <button mat-raised-button
-              style="margin-right: 5%; display: flex; align-items: center; font-size: 16px; width: 85px; margin-top: 0.5%; background-color: #94CC5B;"
-              [routerLink]="['/EditAdm', Admins.user_Id]" type="button"><mat-icon matPrefix
-                style="margin-right:10%;">edit</mat-icon>Edit</button>
+                    style="margin-right: 5%; display: flex; align-items: center; font-size: 16px; width: 85px; margin-top: 0.5%; background-color: #94CC5B;"
+                    [routerLink]="['/EditAdm', Admins.user_Id]" type="button">
+              <mat-icon matPrefix
+                        style="margin-right:10%;">edit</mat-icon>Edit
+            </button>
           </td>
         </ng-container>
 
@@ -93,9 +98,11 @@
           <th mat-header-cell *matHeaderCellDef></th>
           <td mat-cell *matCellDef="let Admins" style="width:140px;">
             <button mat-raised-button
-              style="margin-right: 5%; display: flex; align-items: center; font-size: 16px; width: 110px; margin-top: 0.5%; background-color: #FE4945;"
-              (click)="DeleteAdmin(Admins.user_Id)"><mat-icon matPrefix
-                style="margin-right:10%;">delete</mat-icon>Delete</button>
+                    style="margin-right: 5%; display: flex; align-items: center; font-size: 16px; width: 110px; margin-top: 0.5%; background-color: #FE4945;"
+                    (click)="DeleteAdmin(Admins.user_Id)">
+              <mat-icon matPrefix
+                        style="margin-right:10%;">delete</mat-icon>Delete
+            </button>
           </td>
         </ng-container>
 
