--- a/Frontend/src/app/view-employee-role/view-employee-role.component.html
+++ b/Frontend/src/app/view-employee-role/view-employee-role.component.html
@@ -29,16 +29,20 @@
 
       <span style="flex: 1 1 auto;"></span>
 
-      <mat-form-field appearance="fill" style=" float:right; font-size: 12px; width: 300px; margin-top:0.5%; margin-right:1%;" >
+      <mat-form-field appearance="fill" style=" float:right; font-size: 12px; width: 300px; margin-top:0.5%; margin-right:1%;">
         <mat-label>Search</mat-label>
-        <input matInput  (keyup)="search()" [(ngModel)]="searchWord" />
+        <input matInput (keyup)="search()" [(ngModel)]="searchWord" />
         <mat-icon matSuffix>search</mat-icon>
       </mat-form-field>
 
     </div>
-    
+
+    <div class="d-flex justify-content-center">
+      <span class="loader" id="loading"></span>
+    </div>
+
     <div style="margin-right:1%; margin-left:1%;">
-      <table mat-table [dataSource]="SearchedRole" class="mat-elevation-z8">
+      <table mat-table [dataSource]="SearchedRole" class="mat-elevation-z8" id="table">
 
         <!-- Position Column -->
         <ng-container matColumnDef="id">
@@ -61,7 +65,7 @@
         <ng-container matColumnDef="action">
           <th mat-header-cell *matHeaderCellDef></th>
           <td mat-cell *matCellDef="let Roles" style="width:100px;">
-            <button mat-raised-button style="margin-right: 5%; display: flex; align-items: center; font-size: 16px; width: 85px; margin-top: 0.5%; background-color: #94CC5B;" [routerLink]="['/EditEmpRole', Roles.role_ID]" type="button"><mat-icon matPrefix style="margin-right:10%;" >edit</mat-icon>Edit</button>
+            <button mat-raised-button style="margin-right: 5%; display: flex; align-items: center; font-size: 16px; width: 85px; margin-top: 0.5%; background-color: #94CC5B;" [routerLink]="['/EditEmpRole', Roles.role_ID]" type="button"><mat-icon matPrefix style="margin-right:10%;">edit</mat-icon>Edit</button>
           </td>
         </ng-container>
 
@@ -76,7 +80,7 @@
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       </table>
     </div>
-    
+
 
 
   </mat-sidenav-content>
