--- a/Frontend/src/app/view-employee/view-employee.component.html
+++ b/Frontend/src/app/view-employee/view-employee.component.html
@@ -37,15 +37,18 @@
       <mat-form-field appearance="fill"
                       style=" float:right; font-size: 12px; width: 300px; margin-top:0.5%; margin-right:1%;">
         <mat-label>Search</mat-label>
-        <input matInput (keyup)="search()" [(ngModel)]="searchWord"/>
+        <input matInput (keyup)="search()" [(ngModel)]="searchWord" />
         <mat-icon matSuffix>search</mat-icon>
       </mat-form-field>
 
     </div>
 
+    <div class="d-flex justify-content-center">
+        <span class="loader" id="loading"></span>
+    </div>
 
     <div style="margin-right:1%; margin-left:1%;">
-      <table mat-table [dataSource]="SearchedEmployee" class="mat-elevation-z8">
+      <table mat-table [dataSource]="SearchedEmployee" class="mat-elevation-z8" id="table">
 
         <ng-container matColumnDef="id">
           <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;"> No. </th>
