--- a/Frontend/src/app/view-consumable-category/view-consumable-category.component.html
+++ b/Frontend/src/app/view-consumable-category/view-consumable-category.component.html
@@ -40,6 +40,9 @@
 
 
         <div style="margin-right:1%; margin-left:1%;">
+            <div class="d-flex justify-content-center" *ngIf="SearchedConsumableCategories.length === 0">
+                <span class="loader" id="loading"></span>
+            </div>
             <table mat-table *ngIf="SearchedConsumableCategories.length > 0" [dataSource]="SearchedConsumableCategories"
                 class="mat-elevation-z8">
 
@@ -68,9 +71,11 @@
                     <th mat-header-cell *matHeaderCellDef></th>
                     <td mat-cell *matCellDef="let Category" style="width:140px;">
                         <button mat-raised-button
-                            style="margin-right: 5%; display: flex; align-items: center; font-size: 16px; width: 110px; margin-top: 0.5%;background-color: #FE4945;"
+                            [style.background-color]="hoveredButton === Category.consumable_Category_ID ? '#FE4945' : '#22afbe'"
+                            (mouseenter)="hoveredButton = Category.consumable_Category_ID"
+                            (mouseleave)="hoveredButton = null"
                             (click)="DeleteCategory(this.Category.consumable_Category_ID)"><mat-icon matPrefix
-                                style="margin-right:10%;">delete</mat-icon>Delete</button>
+                                style="margin-right:2%;">delete</mat-icon>Delete</button>
                     </td>
                 </ng-container>
 
