--- a/Frontend/src/app/view-consumable/view-consumable.component.html
+++ b/Frontend/src/app/view-consumable/view-consumable.component.html
@@ -17,6 +17,7 @@
 
     <mat-sidenav-content class="Main-content">
 
+
         <h1 style="margin-left: 1%; margin-top:1%; color: #244688; font-weight:700; font-size:32pt;">
             View Consumables
         </h1>
@@ -39,7 +40,13 @@
         </div>
 
 
+
         <div style="margin-right:1%; margin-left:1%;">
+
+            <div class="d-flex justify-content-center" *ngIf="SearchedConsumables.length === 0">
+                <span class="loader" id="loading"></span>
+            </div>
+
             <table mat-table *ngIf="SearchedConsumables.length > 0" [dataSource]="SearchedConsumables"
                 class="mat-elevation-z8">
 
@@ -88,15 +95,19 @@
                     <th mat-header-cell *matHeaderCellDef></th>
                     <td mat-cell *matCellDef="let Consumable" style="width:140px;">
                         <button mat-raised-button
-                            style="margin-right: 5%; display: flex; align-items: center; font-size: 16px; width: 110px; margin-top: 0.5%;background-color: #FE4945;"
-                            (click)="DeleteConsumable(this.Consumable.consumable_ID)"><mat-icon matPrefix
-                                style="margin-right:10%;">delete</mat-icon>Delete</button>
+                            [style.background-color]="hoveredButton === Consumable.consumable_ID ? '#FE4945' : '#22afbe'"
+                            (mouseenter)="hoveredButton = Consumable.consumable_ID" (mouseleave)="hoveredButton = null"
+                            (click)="DeleteConsumable(Consumable.consumable_ID)">
+                            <mat-icon matPrefix style="margin-right:2%;">delete</mat-icon>Delete
+                        </button>
                     </td>
+
                 </ng-container>
 
                 <tr mat-header-row *matHeaderRowDef="displayedColumns" style="background-color:#244688;"></tr>
                 <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
             </table>
         </div>
+
     </mat-sidenav-content>
 </mat-sidenav-container>
