--- a/Frontend/src/app/view-employee/view-employee.component.html
+++ b/Frontend/src/app/view-employee/view-employee.component.html
@@ -4,15 +4,17 @@
 
       <div mat-list-item style="display: flex; align-items: center;">
         <mat-icon aria-hidden="false" aria-label="admin icon" fontIcon="admin_panel_settings"
-                  style="width:30px; height: 44px; margin-left: 5%;"></mat-icon>
+          style="width:30px; height: 44px; margin-left: 5%;"></mat-icon>
         <h2 class="uni-font">Administration</h2>
       </div>
 
       <a mat-list-item class="uni-font" routerLink="/ViewEmployee">Employees</a>
       <a mat-list-item class="uni-font" routerLink="/ViewAdmin">Admins</a>
       <a mat-list-item class="uni-font" routerLink="/ViewEmpRole">Roles</a>
-      <a mat-list-item class="uni-font">Departments</a>
-      <a mat-list-item class="uni-font">Branch</a>
+      <a mat-list-item *ngIf='RoleToUse === "\"Admin\""' mat-list-item class="uni-font"
+        routerLink="/ViewDepartment">Departments</a>
+      <a mat-list-item *ngIf='RoleToUse === "\"Admin\""' mat-list-item class="uni-font"
+        routerLink="/ViewBranch">Branch</a>
       <a mat-list-item class="uni-font">Delegation of Authority</a>
       <a mat-list-item class="uni-font">Mandate Limits</a>
       <a mat-list-item class="uni-font">Manage Help</a>
@@ -27,17 +29,17 @@
     <div mat-list-item style="margin-left: 0.5%; display: flex;  align-items: center; ">
 
       <button mat-raised-button
-              style="width: 200px; font-size: 14px; height: 42px; margin: 10px; background-color:#244688; color:white;"
-              routerLink="/AddEmployee">
+        style="width: 200px; font-size: 14px; height: 42px; margin: 10px; background-color:#244688; color:white;"
+        routerLink="/AddEmployee">
         Create Employee
       </button>
 
       <span style="flex: 1 1 auto;"></span>
 
       <mat-form-field appearance="fill"
-                      style=" float:right; font-size: 12px; width: 300px; margin-top:0.5%; margin-right:1%;">
+        style=" float:right; font-size: 12px; width: 300px; margin-top:0.5%; margin-right:1%;">
         <mat-label>Search</mat-label>
-        <input matInput (keyup)="search()" [(ngModel)]="searchWord"/>
+        <input matInput (keyup)="search()" [(ngModel)]="searchWord" />
         <mat-icon matSuffix>search</mat-icon>
       </mat-form-field>
 
@@ -102,14 +104,20 @@
         <ng-container matColumnDef="action">
           <th mat-header-cell *matHeaderCellDef></th>
           <td mat-cell *matCellDef="let Employees" style="width:100px;">
-            <button mat-raised-button style="margin-right: 5%; display: flex; align-items: center; font-size: 16px; width: 85px; margin-top: 0.5%; background-color: #94CC5B;" [routerLink]="['/EditEmp', Employees.user_Id]" type="button"><mat-icon matPrefix style="margin-right:10%;">edit</mat-icon>Edit</button>
+            <button mat-raised-button
+              style="margin-right: 5%; display: flex; align-items: center; font-size: 16px; width: 85px; margin-top: 0.5%; background-color: #94CC5B;"
+              [routerLink]="['/EditEmp', Employees.user_Id]" type="button"><mat-icon matPrefix
+                style="margin-right:10%;">edit</mat-icon>Edit</button>
           </td>
         </ng-container>
 
         <ng-container matColumnDef="delete">
           <th mat-header-cell *matHeaderCellDef></th>
           <td mat-cell *matCellDef="let Employees" style="width:140px;">
-            <button mat-raised-button style="margin-right: 5%; display: flex; align-items: center; font-size: 16px; width: 110px; margin-top: 0.5%; background-color: #FE4945; " (click)="DeleteEmployee(Employees.user_Id)"><mat-icon matPrefix style="margin-right:10%;">delete</mat-icon>Delete</button>
+            <button mat-raised-button
+              style="margin-right: 5%; display: flex; align-items: center; font-size: 16px; width: 110px; margin-top: 0.5%; background-color: #FE4945; "
+              (click)="DeleteEmployee(Employees.user_Id)"><mat-icon matPrefix
+                style="margin-right:10%;">delete</mat-icon>Delete</button>
           </td>
         </ng-container>
 
