--- a/Frontend/src/app/view-consumable/view-consumable.component.css
+++ b/Frontend/src/app/view-consumable/view-consumable.component.css
@@ -67,6 +67,14 @@ table {
     animation: lineDropping 0.75s linear infinite;
 }
 
+#DeleteButton:hover {
+    background-color: #FE4945;
+}
+
+#DeleteButton {
+    background-color: #22afbe;
+}
+
 @keyframes wheelSk {
 
     0%,
