--- a/Frontend/src/app/view-consumable-category/view-consumable-category.component.css
+++ b/Frontend/src/app/view-consumable-category/view-consumable-category.component.css
@@ -24,6 +24,14 @@ table {
     font-size: 16pt;
 }
 
+#DeleteButton:hover {
+    background-color: #FE4945;
+}
+
+#DeleteButton {
+    background-color: #22afbe;
+}
+
 .loader {
     position: relative;
     width: 130px;
