--- a/Frontend/src/app/create-branch/create-branch/create-branch.component.html
+++ b/Frontend/src/app/create-branch/create-branch/create-branch.component.html
@@ -2,7 +2,7 @@
     <mat-card style="width: 550px; margin-top: 1%; display: flex; justify-content: center; align-items: center; ">
       <form [formGroup]="myForm" novalidate fxLayout="column wrap" fxLayoutAlign="center center" fxLayoutGap="10px" (ngSubmit)="onSubmit()">
         <mat-card-header>
-          <mat-card-title style="color: #244688; font-weight:700; font-size:32pt; margin-bottom:5%;">Create Branch</mat-card-title>
+          <mat-card-title style="color: #244688; font-weight:700; font-size:32pt; margin-bottom:5%; text-align: center;">Create Branch</mat-card-title>
           <mat-card-subtitle style="justify-content: center; align-items: center;">
   
             <table style="width:100%;" cellspacing="0">
