--- a/Frontend/src/app/main-nav/main-nav.component.html
+++ b/Frontend/src/app/main-nav/main-nav.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar class="main-nav">
   <img src="./assets/Images/image 3.jpg" />
   <span class="main-spacer"></span>
-  <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="home" class="sub-spacer"></mat-icon>
+  <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="home" class="sub-spacer" routerLink="/Home"></mat-icon>
   <a class="sub-spacer" style="font-size: 16pt; text-decoration: none; color: white;" routerLink="/ViewEmployee" mat-button>Administration</a>
   <a class="sub-spacer" style="font-size:16pt; text-decoration:none; color:white;" routerLink="/ViewConsumable" mat-button>Inventory</a>
   <a class="sub-spacer" style="font-size: 16pt; text-decoration: none; color: white;"  mat-button>Finance</a>
