--- a/Frontend/src/app/edit-mandate-limit/edit-mandate-limit.component.html
+++ b/Frontend/src/app/edit-mandate-limit/edit-mandate-limit.component.html
@@ -15,7 +15,7 @@
                                     <br />
                                     <mat-form-field>
                                         <input matInput type="text" placeholder="" formControlName="amount" id="amount"
-                                            required>
+                                            [(ngModel)]="currentMandateLimit.ammount" required>
                                         <mat-error *ngIf="myError('amount', 'pattern')">Amount must be in
                                             numbers.</mat-error>
                                     </mat-form-field>
@@ -27,7 +27,8 @@
                                     <br />
                                     <mat-form-field>
                                         <input matInput [matDatepicker]="picker" placeholder="Choose a date"
-                                            formControlName="date" id="date" required>
+                                            formControlName="date" id="date" [(ngModel)]="currentMandateLimit.date"
+                                            required>
                                         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                                         <mat-datepicker #picker></mat-datepicker>
                                     </mat-form-field>
