--- a/Frontend/src/app/view-admin/view-admin.component.html
+++ b/Frontend/src/app/view-admin/view-admin.component.html
@@ -14,7 +14,7 @@
       <a mat-list-item class="uni-font">Departments</a>
       <a mat-list-item class="uni-font">Branch</a>
       <a mat-list-item class="uni-font">Delegation of Authority</a>
-      <a mat-list-item class="uni-font">Mandate Limits</a>
+      <a mat-list-item class="uni-font" routerLink="/ViewMandateLimit">Mandate Limits</a>
       <a mat-list-item class="uni-font">Manage Help</a>
       <a mat-list-item class="uni-font">Settings</a>
     </mat-nav-list>
