--- a/Frontend/src/app/view-employee-role/view-employee-role.component.html
+++ b/Frontend/src/app/view-employee-role/view-employee-role.component.html
@@ -3,7 +3,8 @@
     <mat-nav-list>
 
       <div mat-list-item style="display: flex; align-items: center;">
-        <mat-icon aria-hidden="false" aria-label="admin icon" fontIcon="admin_panel_settings" style="width:30px; height: 44px; margin-left: 5%;"></mat-icon>
+        <mat-icon aria-hidden="false" aria-label="admin icon" fontIcon="admin_panel_settings"
+          style="width:30px; height: 44px; margin-left: 5%;"></mat-icon>
         <h2 class="uni-font">Administration</h2>
       </div>
 
@@ -13,7 +14,7 @@
       <a mat-list-item class="uni-font">Departments</a>
       <a mat-list-item class="uni-font">Branch</a>
       <a mat-list-item class="uni-font">Delegation of Authority</a>
-      <a mat-list-item class="uni-font">Mandate Limits</a>
+      <a mat-list-item class="uni-font" routerLink="/ViewMandateLimit">Mandate Limits</a>
       <a mat-list-item class="uni-font">Manage Help</a>
       <a mat-list-item class="uni-font">Settings</a>
     </mat-nav-list>
@@ -25,18 +26,21 @@
 
     <div mat-list-item style="margin-left: 0.5%; display: flex;  align-items: center; ">
 
-      <button mat-raised-button style="width: 200px; font-size: 14px; height: 42px; margin: 10px; background-color:#244688; color:white;" routerLink="/AddEmpRole">Create Employee Role</button>
+      <button mat-raised-button
+        style="width: 200px; font-size: 14px; height: 42px; margin: 10px; background-color:#244688; color:white;"
+        routerLink="/AddEmpRole">Create Employee Role</button>
 
       <span style="flex: 1 1 auto;"></span>
 
-      <mat-form-field appearance="fill" style=" float:right; font-size: 12px; width: 300px; margin-top:0.5%; margin-right:1%;" >
+      <mat-form-field appearance="fill"
+        style=" float:right; font-size: 12px; width: 300px; margin-top:0.5%; margin-right:1%;">
         <mat-label>Search</mat-label>
-        <input matInput  (keyup)="search()" [(ngModel)]="searchWord" />
+        <input matInput (keyup)="search()" [(ngModel)]="searchWord" />
         <mat-icon matSuffix>search</mat-icon>
       </mat-form-field>
 
     </div>
-    
+
     <div style="margin-right:1%; margin-left:1%;">
       <table mat-table [dataSource]="SearchedRole" class="mat-elevation-z8">
 
@@ -61,14 +65,20 @@
         <ng-container matColumnDef="action">
           <th mat-header-cell *matHeaderCellDef></th>
           <td mat-cell *matCellDef="let Roles" style="width:100px;">
-            <button mat-raised-button style="margin-right: 5%; display: flex; align-items: center; font-size: 16px; width: 85px; margin-top: 0.5%; background-color: #94CC5B;" [routerLink]="['/EditEmpRole', Roles.role_ID]" type="button"><mat-icon matPrefix style="margin-right:10%;" >edit</mat-icon>Edit</button>
+            <button mat-raised-button
+              style="margin-right: 5%; display: flex; align-items: center; font-size: 16px; width: 85px; margin-top: 0.5%; background-color: #94CC5B;"
+              [routerLink]="['/EditEmpRole', Roles.role_ID]" type="button"><mat-icon matPrefix
+                style="margin-right:10%;">edit</mat-icon>Edit</button>
           </td>
         </ng-container>
 
         <ng-container matColumnDef="delete">
           <th mat-header-cell *matHeaderCellDef></th>
           <td mat-cell *matCellDef="let Roles" style="width:140px;">
-            <button mat-raised-button style="margin-right: 5%; display: flex; align-items: center; font-size: 16px; width: 110px; margin-top: 0.5%; background-color: #FE4945;" (click)="DeleteEmpRole(Roles.role_ID)"><mat-icon matPrefix style="margin-right:10%;">delete</mat-icon>Delete</button>
+            <button mat-raised-button
+              style="margin-right: 5%; display: flex; align-items: center; font-size: 16px; width: 110px; margin-top: 0.5%; background-color: #FE4945;"
+              (click)="DeleteEmpRole(Roles.role_ID)"><mat-icon matPrefix
+                style="margin-right:10%;">delete</mat-icon>Delete</button>
           </td>
         </ng-container>
 
@@ -76,7 +86,7 @@
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       </table>
     </div>
-    
+
 
 
   </mat-sidenav-content>
