--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -1,5 +1,6 @@
-<app-main-nav></app-main-nav>
+
 
 <div>
+  <app-main-nav id="nav"></app-main-nav>
   <router-outlet #outlet="outlet"></router-outlet>
 </div>
