--- a/Frontend/src/app/view-employee-role/view-employee-role.component.html
+++ b/Frontend/src/app/view-employee-role/view-employee-role.component.html
@@ -72,7 +72,7 @@
         <ng-container matColumnDef="delete">
           <th mat-header-cell *matHeaderCellDef></th>
           <td mat-cell *matCellDef="let Roles" style="width:140px;">
-            <button mat-raised-button style="margin-right: 5%; display: flex; align-items: center; font-size: 16px; width: 110px; margin-top: 0.5%; background-color: #FE4945;" (click)="DeleteEmpRole(Roles.role_ID)"><mat-icon matPrefix style="margin-right:10%;">delete</mat-icon>Delete</button>
+            <button id="DeleteButton" mat-raised-button style="margin-right: 5%; display: flex; align-items: center; font-size: 16px; width: 110px; margin-top: 0.5%;" (click)="DeleteEmpRole(Roles.role_ID)"><mat-icon matPrefix style="margin-right:10%;">delete</mat-icon>Delete</button>
           </td>
         </ng-container>
 
