--- a/Frontend/src/app/view-budget-allocation/view-budget-allocation.component.html
+++ b/Frontend/src/app/view-budget-allocation/view-budget-allocation.component.html
@@ -29,8 +29,8 @@
 
             <mat-form-field appearance="fill"
                 style=" float:right; font-size: 12px; width: 300px; margin-top:0.5%; margin-right:1%;">
-                <mat-label>Search</mat-label>
-                <input matInput />
+                <mat-label>Search by Year</mat-label>
+                <input matInput (keyup)="OnInPutChange()" [(ngModel)]="searchNumber" placeholder="exact year..." />
                 <mat-icon matSuffix>search</mat-icon>
             </mat-form-field>
         </div>
@@ -58,6 +58,14 @@
                     <td mat-cell *matCellDef="let BudgetAllocations">{{BudgetAllocations.total}}</td>
                 </ng-container>
 
+                <ng-container matColumnDef="lines">
+                    <th mat-header-cell *matHeaderCellDef></th>
+                    <td mat-cell *matCellDef="let BudgetAllocations" style="width:100px;">
+                        <button mat-raised-button routerLink="/ViewBudgetLines/{{BudgetAllocations.budget_ID}}"
+                            style="margin-right: 5%; display: flex; align-items: center; font-size: 16px; width: 85px; margin-top: 0.5%;background-color: #94CC5B;"
+                            type="button">Budget Lines</button>
+                    </td>
+                </ng-container>
 
                 <ng-container matColumnDef="action">
                     <th mat-header-cell *matHeaderCellDef></th>
@@ -70,8 +78,8 @@
                 <ng-container matColumnDef="delete">
                     <th mat-header-cell *matHeaderCellDef></th>
                     <td mat-cell *matCellDef="let BudgetAllocations" style="width:140px;">
-                        <button mat-raised-button
-                            style="margin-right: 5%; display: flex; align-items: center; font-size: 16px; width: 110px; margin-top: 0.5%; background-color: #FE4945; "
+                        <button id="DeleteButton" mat-raised-button
+                            style="margin-right: 5%; display: flex; align-items: center; font-size: 16px; width: 110px; margin-top: 0.5%; "
                             (click)="DeleteBudgetAllocation(BudgetAllocations.budget_ID)"><mat-icon matPrefix
                                 style="margin-right:10%;">delete</mat-icon>Delete</button>
                     </td>
