--- a/Frontend/src/app/view-mandate-limit/view-mandate-limit.component.html
+++ b/Frontend/src/app/view-mandate-limit/view-mandate-limit.component.html
@@ -34,8 +34,8 @@
 
             <mat-form-field appearance="fill"
                 style=" float:right; font-size: 12px; width: 300px; margin-top:0.5%; margin-right:1%;">
-                <mat-label>Search</mat-label>
-                <input matInput />
+                <mat-label>Search by Amount</mat-label>
+                <input matInput (keyup)="OnInPutChange()" [(ngModel)]="searchNumber" placeholder="exact amount..." />
                 <mat-icon matSuffix>search</mat-icon>
             </mat-form-field>
         </div>
@@ -66,8 +66,8 @@
                 <ng-container matColumnDef="delete">
                     <th mat-header-cell *matHeaderCellDef></th>
                     <td mat-cell *matCellDef="let MandateLimits" style="width:140px;">
-                        <button mat-raised-button
-                            style="margin-right: 5%; display: flex; align-items: center; font-size: 16px; width: 110px; margin-top: 0.5%; background-color: #FE4945; "
+                        <button id="DeleteButton" mat-raised-button
+                            style="margin-right: 5%; display: flex; align-items: center; font-size: 16px; width: 110px; margin-top: 0.5%;"
                             (click)="DeleteMandateLimit(MandateLimits.mandate_ID)"><mat-icon matPrefix
                                 style="margin-right:10%;">delete</mat-icon>Delete</button>
                     </td>
