--- a/Frontend/src/app/view-consumable/view-consumable.component.html
+++ b/Frontend/src/app/view-consumable/view-consumable.component.html
@@ -43,12 +43,11 @@
 
         <div style="margin-right:1%; margin-left:1%;">
 
-            <div class="d-flex justify-content-center" *ngIf="SearchedConsumables.length === 0">
+            <div class="d-flex justify-content-center">
                 <span class="loader" id="loading"></span>
             </div>
 
-            <table mat-table *ngIf="SearchedConsumables.length > 0" [dataSource]="SearchedConsumables"
-                class="mat-elevation-z8">
+            <table mat-table [dataSource]="SearchedConsumables" class="mat-elevation-z8" id="table">
 
                 <ng-container matColumnDef="Name">
                     <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;">Name </th>
