Update to Onboard Request - solesupplier and correction of validation for vendor

--- a/Frontend/src/app/onboard_request/request-create/request-create.component.css
+++ b/Frontend/src/app/onboard_request/request-create/request-create.component.css
@@ -17,7 +17,7 @@
     left: 0;
     right: 0;
     background: #eee;
-    border-top:solid;
+    border-top:1px solid;
     text-align: center;
    
 }
