--- a/Frontend/src/app/onboard_request/request-create/request-create.component.html
+++ b/Frontend/src/app/onboard_request/request-create/request-create.component.html
@@ -57,7 +57,7 @@
       <tr>
         <td></td>
         <td>  
-           <button mat-raised-button [hidden]="i < 3" (click)="removeTab(i)" > Delete Tab </button>
+           <button mat-raised-button id="btnHover" [hidden]="i < 3" (click)="removeTab(i)" > Delete Quotation</button>
         </td>
       </tr>
       <tr>
