small fixes + validation

--- a/Frontend/src/app/edit-budget-allocation/edit-budget-allocation.component.html
+++ b/Frontend/src/app/edit-budget-allocation/edit-budget-allocation.component.html
@@ -11,7 +11,7 @@
                         <tr>
                             <td style="width:100%;">
                                 <mat-card-content>
-                                    <label style=" color:black;">Date:</label>
+                                    <label style=" color:black;">Date Created:</label>
                                     <br />
                                     <mat-form-field>
                                         <input matInput [matDatepicker]="picker" placeholder="Choose a date"
