--- a/Frontend/src/app/view-budget-category/view-budget-category.component.html
+++ b/Frontend/src/app/view-budget-category/view-budget-category.component.html
@@ -3,8 +3,8 @@
         <mat-nav-list>
 
             <div mat-list-item style="display: flex; align-items: center;">
-                <mat-icon aria-hidden="false" aria-label="admin icon" fontIcon="admin_panel_settings"
-                    style="width:30px; height: 44px; margin-left: 5%;"></mat-icon>
+                <mat-icon aria-hidden="false" aria-label="payments"
+                    style="width:30px; height: 44px; margin-left: 5%;">payments</mat-icon>
                 <h2 class="uni-font">Finance</h2>
             </div>
 
