--- a/Frontend/src/app/view-mandate-limit/view-mandate-limit.component.html
+++ b/Frontend/src/app/view-mandate-limit/view-mandate-limit.component.html
@@ -54,7 +54,7 @@
                 </ng-container>
                 <ng-container matColumnDef="date">
                     <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;"> Date </th>
-                    <td mat-cell *matCellDef="let MandateLimits">{{MandateLimits.date}}</td>
+                    <td mat-cell *matCellDef="let MandateLimits">{{MandateLimits.date | date:"dd/MM/yyyy"}}</td>
                 </ng-container>
 
                 <ng-container matColumnDef="action">
