--- a/Frontend/src/app/view-budget-allocation/view-budget-allocation.component.html
+++ b/Frontend/src/app/view-budget-allocation/view-budget-allocation.component.html
@@ -46,8 +46,9 @@
                     <td mat-cell *matCellDef="let BudgetAllocations">{{BudgetAllocations.department.name}}</td>
                 </ng-container>
                 <ng-container matColumnDef="date">
-                    <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;"> Date </th>
-                    <td mat-cell *matCellDef="let BudgetAllocations">{{BudgetAllocations.date_Created}}</td>
+                    <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;"> Date Created </th>
+                    <td mat-cell *matCellDef="let BudgetAllocations">{{BudgetAllocations.date_Created |
+                        date:"dd/MM/yyyy"}}</td>
                 </ng-container>
                 <ng-container matColumnDef="year">
                     <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;"> Year </th>
