--- a/Frontend/src/app/view-budget-lines/view-budget-lines.component.html
+++ b/Frontend/src/app/view-budget-lines/view-budget-lines.component.html
@@ -20,7 +20,7 @@
 
             <mat-form-field appearance="fill"
                 style=" float:right; font-size: 12px; width: 300px; margin-top:0.5%; margin-right:1%;">
-                <mat-label>Search by Department</mat-label>
+                <mat-label>Search by Category</mat-label>
                 <input matInput (keyup)="OnInPutChange()" [(ngModel)]="searchTerm" />
                 <mat-icon matSuffix>search</mat-icon>
             </mat-form-field>
