--- a/Frontend/src/app/onboard_request/request-view/request-view.component.html
+++ b/Frontend/src/app/onboard_request/request-view/request-view.component.html
@@ -56,7 +56,7 @@
             <ng-container matColumnDef="action">
               <th mat-header-cell *matHeaderCellDef></th>
               <td mat-cell *matCellDef="let element" style="width:100px;">
-                <button *ngIf="element.onboard_Request_status_ID == 1" mat-raised-button routerLink="/request-update/{{element.onboard_Request_Id}}" style="margin-right: 5%; display: flex; align-items: center; font-size: 16px; width: 110px; margin-top: 0.5%;background-color: #94CC5B;"><mat-icon matPrefix style="margin-right:10%;">edit</mat-icon>Edit</button>
+                <button *ngIf="element.onboard_Request_status_ID == 1" mat-raised-button routerLink="/request-update/{{element.onboard_Request_Id}}" style="margin-right: 5%; display: flex; align-items: center; font-size: 16px; width: 110px; margin-top: 0.5%;background-color: #94CC5B;"><mat-icon matPrefix style="margin-right:10%;">edit</mat-icon>Update</button>
               </td>
             </ng-container>
     
